<resources>
    <string name="app_name">Vui Bóng Đá</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="null_string"></string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_color">#ff0281e4</string>
    <string name="app_name_header">ABongDa 1.9.2</string>
    <string name="timeString">20:30</string>
    <string name="shortSlash">-</string>
    <string name="FTString">FT</string>
    <string name="host">host</string>
    <string name="guest">guest</string>
    <string name="matchTime">22:00\n18/08</string>
    <string name="tvChanel">K+, VTV3</string>
    <string name="ttcn">Thông tin cá nhân</string>
    <string name="slashwithnum">3 - 3</string>
    <string name="longName">West Bromwich Albion</string>
    <string name="matchDate">16/8</string>
    <string name="clb">Câu lạc bộ</string>
    <string name="match">Trận</string>
    <string name="btbb">BT/BB</string>
    <string name="congtru">+/-</string>
    <string name="score">Điểm</string>
    <string name="tin_tuc">Tin tức</string>
    <string name="live_score">Live score</string>
    <string name="hai_tu_gio_toi">24h tới</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="lich_thi_dau">Lịch thi đấu</string>
    <string name="xep_hang">Xếp hạng</string> 
    <string name="thong_ke">Thống kê</string>
    <string name="lich_su">Lịch sử</string>
    <string name="dat_cuoc">Đặt cược</string>
    <string name="menu">Menu</string>
    <string name="dacoloixayra">Đã có lỗi xảy ra, vui lòng thử lại sau!</string>
    <string name="khongcoinernet">Không có kết nối internet hoặc internet bị gián đoạn, vui lòng thử lại sau!</string>
    <string name="khong_tim_thay_noi_dung">Không tìm thấy nội dung!</string>
    <string name="vui_long_cho">Vui lòng chờ...</string>
    <string name="dang_tai_noi_dung">Đang tải nội dung</string>
    <string name="dong">Đóng</string>
    <string name="da_co_loi_xay_ra_vui_long_thu_lai_sau">Đã có lỗi xảy ra, vui lòng thử lại sau!</string>
    <string name="loi">Lỗi</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="de_sau">Để sau</string>
    <string name="next_24h">24h tới</string>
    <string name="chua_co_noi_dung">Chưa có nội dung!</string>
    <string name="khong_co_tran_dau_trong_2_ngay_toi">Không có trận đấu nào trong 2 ngày tới!</string>
    <string name="hom_nay">Hôm nay</string>
    <string name="ngay_mai">Ngày mai</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="error_tdn">Tên đăng nhập phải có tối thiểu 6 ký tự!</string>
    <string name="error_tdn2">Tên đăng nhập không được có ký tự lạ!</string>
    <string name="error_mk">Mật khẩu phải có tối thiểu 6 ký tự!</string>
    <string name="error_mk2">Xác nhận mật khẩu sai!</string>
    <string name="dktk">Đăng ký thành công, vui lòng đăng nhập để tiếp tục!</string>
    <string name="tdntt">Tên đăng nhập đã tồn tại, vui lòng sử dụng tên khác!</string>
    <string name="tdnhmkkcx">Tên đăng nhập hoặc mật khẩu không chính xác!</string>
    <string name="ho_so">Hồ sơ</string>
    <string name="bcdndxndn">Bạn cần đăng nhập để xem nội dung này !</string>
    <string name="dmktc">Đổi mật khẩu thành công! Bạn có thể sử dụng mật khẩu mới cho lần đăng nhập kế tiếp.</string>
    <string name="mkckcx">Mật khẩu cũ không chính xác!</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="cap_nhat_thong_tin_ca_nhan">Cập nhật thông tin cá nhân</string>
    <string name="emkhl">Email không hợp lệ, vui lòng thử lại!</string>
    <string name="tdtttk">Thay đổi thông tin thành công!</string>
    <string name="hop_thu">Hộp thư</string>
    <string name="thang">Tháng</string>
    <string name="doi_hinh">Đội hình</string>
    <string name="l_ch_ph_t_s_ng">Lịch phát sóng</string>
    <string name="l_ch_s_i_u">Lịch sử đối đầu</string>
    <string name="t_l_c_c_nh_n_t_c_c">Tỉ lệ cược (nhấn để đặt cược)</string>
    <string name="chu_nha">Chủ nhà\n</string>
    <string name="nhantbkhikth">Nhận thông báo kết quả khi kết thúc</string>
    <string name="tddkt">Trận đấu đã kết thúc!</string>
    <string name="tran_dau">Trận đấu</string>
    <string name="xu">" xu"</string>
    <string name="bpdtt">"Bạn phải đặt tối thiểu "</string>
    <string name="hieu_suat">Hiệu suất</string>
    <string name="so_cua_dat">Số cửa đặt</string>
    <string name="so_cua_thang">Số cửa thắng</string>
    <string name="so_xu_dat">Số xu đặt</string>
    <string name="so_xu_thang">Số xu thắng</string>
    <string name="top_dai_gia">Top đại gia</string>
    <string name="top_cao_thu">Top cao thủ</string>
    <string name="clips_tr_n_u_nh_n_xem">Clips trận đấu (nhấn để xem)</string>
</resources>
