<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context=".activity.HomeActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="0dp"
                app:elevation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize">
            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pager"
                android:layout_above="@+id/bottom_bar"></android.support.v4.view.ViewPager>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_bar_height"
                android:id="@+id/bottom_bar"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="1"
                android:layout_alignParentBottom="true">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/bottom_tab_selector"
                    android:id="@+id/bottom_tab_0">
                    <ImageView
                        android:layout_width="@dimen/bottom_bar_item_image_size"
                        android:layout_height="@dimen/bottom_bar_item_image_size"
                        android:src="@drawable/menuitem_tk"
                        style="@style/bottom_tab_item_image"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/bottom_tab_item_text"
                        android:text="@string/ho_so"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/bottom_tab_selector"
                    android:id="@+id/bottom_tab_1">
                    <ImageView
                        android:layout_width="@dimen/bottom_bar_item_image_size"
                        android:layout_height="@dimen/bottom_bar_item_image_size"
                        android:src="@drawable/account_history"
                        style="@style/bottom_tab_item_image"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/bottom_tab_item_text"
                        android:text="@string/lich_su"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/bottom_tab_selector"
                    android:id="@+id/bottom_tab_2">
                    <ImageView
                        android:layout_width="@dimen/bottom_bar_item_image_size"
                        android:layout_height="@dimen/bottom_bar_item_image_size"
                        android:src="@drawable/menuitem_dc"
                        style="@style/bottom_tab_item_image"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/bottom_tab_item_text"
                        android:text="@string/dat_cuoc"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/bottom_tab_selector"
                    android:id="@+id/bottom_tab_3">
                    <ImageView
                        android:layout_width="@dimen/bottom_bar_item_image_size"
                        android:layout_height="@dimen/bottom_bar_item_image_size"
                        android:src="@drawable/menuitem_gd"
                        style="@style/bottom_tab_item_image"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/bottom_tab_item_text"
                        android:text="@string/thong_ke"/>
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/foreground_menu"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_color_50"
            android:visibility="gone"/>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>