<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <include
            layout="@layout/custom_actionbar"/>
    </LinearLayout>
    <ats.abongda.customClass.view.NonInterceptedViewPagerSwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swiper">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color">
            <include
                layout="@layout/notfound_layout"/>
            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/mainlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_color"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/panel_1">

                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_5"
                        android:background="@drawable/border_bottom_top"
                        android:id="@+id/tab_1_5">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_action_collapse"
                            android:scaleType="fitXY"
                            android:id="@+id/tab_ind_1_5" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:paddingRight="50dp"
                            android:paddingLeft="@dimen/padding_5"
                            android:text="@string/clips_tr_n_u_nh_n_xem"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:textColor="@color/white_color"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/panel_1_5">
                        <android.support.v4.view.ViewPager
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:id="@+id/clip_pager"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_5"
                        android:background="@drawable/border_bottom_top"
                        android:id="@+id/tab_2">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_action_collapse"
                            android:scaleType="fitXY"
                            android:id="@+id/tab_ind_2" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:paddingRight="50dp"
                            android:paddingLeft="@dimen/padding_5"
                            android:text="@string/t_l_c_c_nh_n_t_c_c"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:textColor="@color/white_color"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/panel_2">

                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_5"
                        android:background="@drawable/border_bottom_top"
                        android:id="@+id/tab_3">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_action_collapse"
                            android:scaleType="fitXY"
                            android:id="@+id/tab_ind_3" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:paddingRight="50dp"
                            android:paddingLeft="@dimen/padding_5"
                            android:text="@string/l_ch_ph_t_s_ng"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:textColor="@color/white_color"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/panel_3">

                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_5"
                        android:background="@drawable/border_bottom_top"
                        android:id="@+id/tab_4">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_action_collapse"
                            android:scaleType="fitXY"
                            android:id="@+id/tab_ind_4" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:paddingRight="50dp"
                            android:paddingLeft="@dimen/padding_5"
                            android:text="@string/doi_hinh"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:textColor="@color/white_color"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/panel_4">

                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_5"
                        android:background="@drawable/border_bottom_top"
                        android:id="@+id/tab_5">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_action_collapse"
                            android:scaleType="fitXY"
                            android:id="@+id/tab_ind_5" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:paddingRight="50dp"
                            android:paddingLeft="@dimen/padding_5"
                            android:text="@string/l_ch_s_i_u"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:textColor="@color/white_color"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/panel_5">

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </ats.abongda.customClass.view.NonInterceptedViewPagerSwipeRefreshLayout>
</LinearLayout>